--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
+    
 </head>
 
 <body>
@@ -182,7 +183,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
         crossorigin="anonymous"></script>
     <!-- Local Javascript -->
     <script src="{% static 'js/slideShow.js' %}"></script>
-
+    <script src="{% static 'js/api/crfToken.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>    <script src="https://cdn.ckeditor.com/ckeditor5/40.0.0/classic/ckeditor.js"></script>
 </body>
-
 </html>
