--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1194,6 +1194,102 @@ textarea::placeholder {
 .subcontainer span{
     font-size: 30px;
 }
+
+/* ------------------------------------------------CSS styles for the model */
+
+.modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: red;
+}
+
+/* Style for the modal */
+.task-model{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  /* Style for the modal content */
+  .modal-content {
+    background-color: var(--white);
+    max-width: 900px;
+    height: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+  }
+  
+  /* Style for the close button */
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #333;
+  }
+  
+  /* Style for the form labels */
+  label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+  }
+  
+  /* Style for the input fields */
+  .task-model input[type="text"],
+  .task-model textarea,
+  .task-model select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 16px;
+  }
+  
+  /* Style for the submit button */
+  .task-model button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-size: 16px;
+  }
+  
+/* Style for the "Active" checkbox */
+ .task-model label[for="templateActive"] {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  .task-model button[type="submit"]:hover {
+    background-color: #45a049;
+  }
+
 /* -------------------------------------------------------------------- Media queries */
 
 /* large devices (tablet, etc 1492px and down) */
@@ -1542,3 +1638,4 @@ iframe {
 
 
 }
+
