--- a/templates/api/task.html
+++ b/templates/api/task.html
@@ -1,10 +1,16 @@
 {% extends 'excursions/excursions_base.html' %}
 {% load static %}
-
 {% block content %}
 <section class="text-center">
     <div id="todo_container">
-        <h4 id="h4_title" class="text-center mt-5">My To-Do List</h4>
+        <h4 class="text-center mt-5">My To-Do List <span class="badge bg-site-color" id="h4_title_span"></span></h4>
+        <div class="center-btn">
+            <button class="btn my_hover sear-btn btn-outline-secondary " id="addbtn">
+                Add Task
+                <i class="fa-solid fa-square-plus="> </i>
+            </button>
+
+        </div>
             <div class="table_wrapper table-responsive">
                 <table class="data_table" id="task_list_data">
                     <tr>
@@ -14,17 +20,45 @@
                         <th>Deadline</th>
                         <th></th>
                         <th></th>
-                        <th></th>
                     </tr>
                 </table>
             </div>
     
     </div>
 </section>
+<!-- Add Task model -->
+<div id="modal" class="task-model">
+    <div class="modal-content">
+        <span id="closeModal" class="close">&times;</span>
+        <h2>Add Task</h2>
+        <!-- Input elements -->
+        <form id="addTaskForm" id="editTaskForm">
+            <label for="taskTitle">Title:</label>
+            <input type="text" id="taskTitle" id="editTaskTitle" name="taskTitle" placeholder="Enter task title" required>
+            <label for="taskDescription">Description:</label>
+            <div id="editor" id="taskDescription">
+            </div>
+            <label for="taskDeadline">Deadline:</label>
+            <input type="datetime-local" id="taskDeadline" id="editTaskDeadline" name="taskDeadline" required>
+            
+            <label for="taskCompleted">Completed:</label>
+            <input type="checkbox" id="taskCompleted" id="editTaskCompleted" name="taskCompleted">
+            
+            <button type="submit">Save</button>
+        </form>
+</div>
+</div>
+<script src="https://cdn.ckeditor.com/ckeditor5/40.0.0/classic/ckeditor.js"></script>
 <script>
     let siteUrl = '{{url}}'
-    console.log(siteUrl)
     const userId = '{{request.user.id}}'
 </script>
 <script type="module" src="{% static 'js/api/Task.js' %}"></script>
+<script>
+    ClassicEditor
+        .create( document.querySelector( '#editor' ) )
+        .catch( error => {
+            console.error( error );
+        } );
+</script>
 {% endblock content %}
