--- a/templates/base.html
+++ b/templates/base.html
@@ -6,130 +6,221 @@
     <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Explore our huge selection of excursions and places to stay in punta cana.
-Visit Saona Island, an idyllic speck of sand and palm trees in the blue Caribbean, 
-during a full-day tour from Punta Cana. Board a small speedboat for the thrilling ride out to the island, 
-including a stop at a natural swimming pool where you can see starfish.
- And stay in one of our beautiful rooms or rent a whole apartment with us at a very low price. 
-">
-    <meta name="keywords" content="punta cana, bavaro, rent, room,excursions,Visit Saona Island,
-blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
- Day Trip, things to do in puntacana, puntacana tours, Scape Park Punta Cana,
-  Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, 
-  Buggies & Horse Riding, Punta Cana Off-Road Dune, Buggy Adventure, Amazing Water Cave,tours, 
-  Horseback Riding, City Tour, Cacao Farm,  Zipline / Dune Buggy, holiday rentals, home deals, 
-  Luxury Condo, Steps Away From The Beach, ocean view, punta cana el cortecito ">
+    <meta name="description" content="">
+    <meta name="description" content="{% block description %}Explore the best 2023 Punta Cana excursions for family adventures, including Saona Island tours and unique activities in Punta Cana Bavaro. Discover excursiones en Republica Dominicana, delve into the Caribbean's treasures, and find excursiones near you. Contact excursiones VIP Punta Cana for affordable, child-friendly options, and explore the diverse excursiones Punta Cana has to offer, all at great prices. Don't miss the top Punta Cana tours and tourist attractions with trusted tour companies.{% endblock %}">
+    <meta name="keywords" content="punta cana, overseas adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
     <meta name="robots" content="index, follow">
-    <title>Punta Cana Explore </title>
-    <!-- Bootstrap 5.2.3-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- <title>Punta cana Explore</title> -->
+    <title>{% block title %}Punta cana Explore{% endblock %}</title>
+    <!-- Bootstrap 5.0.2-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
-    <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Qwitcher Grypen" rel="stylesheet">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="192x192" href="{% static 'images/favicon/android-chrome-192x192.png' %}">
     <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon/android-chrome-512x512.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
+    <!-- jquery -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
-    
 </head>
 
 <body>
-    <!-- home navbar -->
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><span id="logo">Punta cana <span id="Explore">Explore</span><span id="initial">PCE</span></span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/excursions/Logo.png' %}"
+                alt="Yara name with a palm tree"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="links-container">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'excursions' %}"><i class="fa-solid fa-compass"></i>
-                            Excursions</a>
+                        <a class="nav-link" href="{% url 'excursions' %}"><i class="fa-solid fa-house"></i>
+                            Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'rentals' %}"> <i class="fa-solid fa-bed"></i>
-                            Rentals</a>
+                    <!-- Sort by -->
+                    <li class="nav-item dropdown display_on_computer">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa-solid fa-filter"></i>Sort by
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="{% url 'newest_result' %}">Sort by newest</a>
+                            </li>
+
+                            <li><a class="dropdown-item" href="{% url 'oldest_result' %}">Sort by Oldest</a>
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'filter_by_ascend' %}">Price (low to
+                                    high)</a>
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'filter_by_descend' %}">Price (high to
+                                    low)
+                                </a></li>
+                        </ul>
                     </li>
                     {% if not user.is_authenticated %}
                     <li class="nav-item dropdown">
+
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fa-solid fa-user"></i> My account
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
-                                        class="fa-solid fa-user"></i> Sign in</a></li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'account_signup' %}"><i
-                                        class="fa-solid fa-user-plus"></i> Register </a>
+                                <a class="dropdown-item" href="{% url 'account_login' %}"><i
+                                        class="fa-solid fa-user"></i> Sign in</a>
                             </li>
-
+                            <li><a class="dropdown-item" href="{% url 'account_signup' %}"><i
+                                        class="fa-solid fa-user-plus"></i> Register </a></li>
                         </ul>
+                    </li>
                     {% else %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false"> <i class="fa-solid fa-user"></i> Hi {{user|title}}</a>
-
+                            aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> Hi {{user|title}}
+                        </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="{% url 'account_logout' %}"><i class="fa-solid fa-user">
-                                    </i> Logout</a>
+                                <a class="dropdown-item" href="{% url 'account_logout' %}"><i
+                                        class="fa-solid fa-user"></i> Logout</a>
                             </li>
-
-
-
                             <li>
-                                <a class="dropdown-item" href="{% url 'account_change_password' %}">
-                                    <i class="fa-solid fa-user"></i> Change Password</a>
+                                <a class="dropdown-item" href="{% url 'account_change_password' %}"><i
+                                        class="fa-solid fa-user">
+                                    </i> Change Password</a>
                             </li>
-
                             {% if request.user.is_superuser %}
                             <li>
-                                <a class="dropdown-item" href="{% url 'administrator' %}"><i
-                                        class="fa-solid fa-toolbox"></i> Admin board</a>
+                                <a class="dropdown-item" href="{% url 'administrator' %}">
+                                    <i class="fa-solid fa-toolbox"></i> Admin board</a>
                             </li>
+                            
                             {% else %}
-                            <li>
-                                <a class="dropdown-item" href="{% url 'excursion-bookings' %}">
+                            <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
                                     <i class="fa-solid fa-book-circle-arrow-up"></i> Excursion Bookings</a>
                             </li>
-
-                            <li>
-                                <a class="dropdown-item" href="{% url 'rental-bookings' %}"> <i
-                                        class="fa-solid fa-book-circle-arrow-up"></i>
+                            <!-- <li>
+                                <a class="dropdown-item" href="{% url 'rental-bookings' %}">
+                                    <i class="fa-solid fa-book-circle-arrow-up"></i>
                                     Rental Bookings</a>
-                            </li>
+                            </li> -->
                             {% endif %}
                         </ul>
+
+                        {% endif %}
+                        <!-- Contacts -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i>
+                            Contact</a>
                     </li>
 
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'contact' %}"> Contact</a>
+                    <!-- cart -->
+                    <li class="nav-item cart display_on_computer">
+                        <a style="color:black"
+                            class="nav-link btn my_hover sear-btn btn-outline-secondary position-relative"
+                            href="{% url 'excursion-cart' %}">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            {% if total %}
+                            ${{total | floatformat:2}}
+                            {% else %}
+                            $0.00
+                            {% endif %}
+                        </a>
                     </li>
                 </ul>
+                <!-- Search form -->
+                <div class="display_on_computer">
+                    <form class="d-flex" role="search" method="get" autocomplete="on"
+                        action="{% url 'excursion_search_results' %}">
+                        {% if navbar_input %}
+                        <input class="form-control me-2" type="search" name="navbar" placeholder="{{navbar_input}}"
+                            aria-label="Search">
+                        {% else %}
+                        <input class="form-control me-2" type="search" name="navbar" placeholder="Search excursions"
+                            aria-label="Search">
+                        {% endif %}
+                        <button class="btn my_hover sear-btn btn-outline-secondary" type="submit">Search</button>
+                    </form>
+                </div>
             </div>
         </div>
+        <div id="phone_search_container">
+                    <!-- cart -->
+                    <div class="nav-item cart display_on_phone">
+                        <a class="nav-link btn  my_hover sear-btn btn-outline-secondary position-relative"
+                            href="{% url 'excursion-cart' %}">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            {% if total %}
+                            £{{total | floatformat:2}}
+                            {% else %}
+                            £0.00
+                            {% endif %}
+                        </a>
+                    </div>
+
+            <!-- Sort by -->
+            <div class="nav-item dropdown display_on_phone">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <i class="fa-solid fa-filter"></i>Sort by
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="{% url 'newest_result' %}">Sort by newest</a>
+                    </li>
+
+                    <li><a class="dropdown-item" href="{% url 'oldest_result' %}">Sort by Oldest</a>
+                    </li>
+                    <li><a class="dropdown-item" href="{% url 'filter_by_ascend' %}">Price (low to
+                            high)</a>
+                    </li>
+                    <li><a class="dropdown-item" href="{% url 'filter_by_descend' %}">Price (high to
+                            low)
+                        </a></li>
+                </ul>
+            </div>
+
+            <!-- Search form -->
+            <div class="display_on_phone" id="search_input">
+                <form class="d-flex display_on_phone" role="search" method="get" autocomplete="on"
+                    action="{% url 'excursion_search_results' %}">
+                    {% if navbar_input %}
+                    <input class="form-control me-2" type="search" name="navbar" placeholder="{{navbar_input}}"
+                        aria-label="Search">
+                    {% else %}
+                    <input class="form-control me-2" type="search" name="navbar" placeholder="Search excursions"
+                        aria-label="Search">
+                    {% endif %}
+                    <button class="btn my_hover sear-btn btn-outline-secondary" type="submit">Search</button>
+                </form>
+            </div>
+
+        </div>
     </nav>
+
     <!-- flash messages -->
     <div class="message mt-3">
         {% if messages %}
         {% for message in messages %}
         {% if message.tags == "success" %}
         <div class="alert alert-success" role="alert">
-            {{message}}
+            {{ message|safe }}
         </div>
         {% else %}
         <div class="alert alert-danger" role="alert">
@@ -139,6 +230,11 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
         {% endfor %}
         {% endif %}
     </div>
+
+    <div class="whatsap-container draggable" id="draggableElement">
+        <a aria-label="Whatsapp" rel="noopener" rel="whatsapp" href="https://api.whatsapp.com/send?phone=447541147634"
+            target="_blank"><img id="whatsapp-floating" class="text-center" src="{% static 'images/excursions/whatsapp.png'%}"></a>
+        </div>
 
     <main>
         {% block content %}
@@ -154,6 +250,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                 <script>document.write(new Date().getFullYear())</script> Punta Cana Explore
             </p>
         </div>
+
 
         <!--links Icon-->
         <div class="social-media-links">
@@ -175,15 +272,25 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
             </div>
         </div>
 
+        <!-- <div class="referecia" style="color:white">
+            <a aria-label="tiktok" rel="reference" target="_blank" href="{% url 'reference' %}">Referencia</a>
+        </div> -->
+
     </footer>
 
     <!--Bootstrap 5.2 Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <!-- jQuery -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
+    <!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
     <!-- Local Javascript -->
-    <script src="{% static 'js/slideShow.js' %}"></script>
-    <script src="{% static 'js/api/crfToken.js' %}"></script>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>    <script src="https://cdn.ckeditor.com/ckeditor5/40.0.0/classic/ckeditor.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/dragable_whatsapp.js' %}"></script>
 </body>
+
 </html>
