--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="">
-    <meta name="description" content="{% block description %}Explore the best 2023 Punta Cana excursions for family adventures, including Saona Island tours and unique activities in Punta Cana Bavaro. Discover excursiones en Republica Dominicana, delve into the Caribbean's treasures, and find excursiones near you. Contact excursiones VIP Punta Cana for affordable, child-friendly options, and explore the diverse excursiones Punta Cana has to offer, all at great prices. Don't miss the top Punta Cana tours and tourist attractions with trusted tour companies.{% endblock %}">
-    <meta name="keywords" content="punta cana, overseas adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
+    <meta name="description" content="{% block description %}Explore and discover the best 2023 Punta Cana excursions for family adventures, including Saona Island tours and unique activities in Punta Cana Bavaro. Discover excursiones en Republica Dominicana, delve into the Caribbean's treasures, and find excursiones near you. Contact excursiones VIP Punta Cana for affordable, child-friendly options, and explore the diverse excursiones Punta Cana has to offer, all at great prices. Don't miss the top Punta Cana tours and tourist attractions with trusted tour companies.{% endblock %}">
+    <meta name="keywords" content="punta cana, Discovery, overseas adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
     <meta name="robots" content="index, follow">
     <!-- <title>Punta cana Explore</title> -->
-    <title>{% block title %}Punta cana Explore{% endblock %}</title>
+    <title>{% block title %}Punta Cana Discovery{% endblock %}</title>
     <!-- Bootstrap 5.0.2-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -247,7 +247,7 @@
         <!--Copyright-->
         <div class="footer-copyright">
             <p>&copy;
-                <script>document.write(new Date().getFullYear())</script> Punta Cana Explore
+                <script>document.write(new Date().getFullYear())</script> Punta Cana Discovery
             </p>
         </div>
 
