--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -31,6 +31,16 @@
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8D597NVLB">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-Z8D597NVLB');
+</script>
 </head>
 
 <body>
