--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -240,14 +240,15 @@
         {% endif %}
     </div>
 
+    <!-- floating whatsapp code -->
     <div class="whatsap-container draggable" id="draggableElement">
         <a aria-label="Whatsapp" rel="noopener" rel="whatsapp" href="https://api.whatsapp.com/send?phone=447541147634"
             target="_blank"><img id="whatsapp-floating" class="text-center" src="{% static 'images/excursions/whatsapp.png'%}"></a>
         </div>
-
+    <!-- discount code -->
         <div class="product">
             <div class="discount-badge">20% OFF</div>
-            <p class="product-code">Product Code: del506</p>
+            <p class="product-code">Discount Code: del506</p>
             <div id="countdown"></div>
         </div>
     <main>
