Fix title company table mistake

--- a/templates/administrator/company_bookings.html
+++ b/templates/administrator/company_bookings.html
@@ -168,7 +168,7 @@
             <!--------------------------------------------------------------------------------------------- Horse bookings -->
 
             {% if horse_bookings %}
-            <h4 class="text-center mt-5">Haitises tour<span
+            <h4 class="text-center mt-5">Horse tour<span
                     class="badge bg-site-color"></span></h4>
             <div class="table_wrapper table-responsive">
                 <table class="data_table">
@@ -207,7 +207,7 @@
 
             <!--------------------------------------------------------------------------------------------- catalina bookings -->
             {% if catalina_bookings %}
-            <h4 class="text-center mt-5">Haitises tour<span
+            <h4 class="text-center mt-5">Catalina tour<span
                     class="badge bg-site-color"></span></h4>
             <div class="table_wrapper table-responsive">
                 <table class="data_table">
@@ -245,7 +245,7 @@
             {% endif %}
         <!--------------------------------------------------------------------------------------------- buggie bookings -->
         {% if buggie_bookings %}
-        <h4 class="text-center mt-5">Haitises tour<span
+        <h4 class="text-center mt-5">Buggie tour<span
                 class="badge bg-site-color"></span></h4>
         <div class="table_wrapper table-responsive">
             <table class="data_table">
