style better the dicount badge

--- a/templates/administrator/company_bookings.html
+++ b/templates/administrator/company_bookings.html
@@ -5,7 +5,7 @@
 
 <!-- header and card section -->
 <section>
-    <h1 class="text-center mt-5">Companies Bookings</h1>
+    <h1 class="text-center mt-5">Bookings detail for next day</h1>
 
 <div class="bookings_container">
     <!--------------------------------------------------------- excursions sections -->
