--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -45,11 +45,11 @@
 
 <body>
         <!-- discount code -->
-        <div class="product">
+        <!-- <div class="product">
             <span class="discount-badge">20% OFF</span>
             <span class="product-code">Discount Code: del506</span>
             <span id="countdown"></span>
-        </div>
+        </div> -->
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
