--- a/templates/excursions/success_page.html
+++ b/templates/excursions/success_page.html
@@ -17,6 +17,8 @@
         <spa style="font-size: 27px; font-weight: bolder;">Scan the barcode first, and then apply the discount code prior to finalizing your checkout.</spa>
     </div>
         <img id="img_container" src="{% static 'images/excursions/Descuento.png' %}" alt="Italian Trulli">
+        <img class="dicount_on_card_badge" src="{% static 'images/excursions/dicount_on_card_badge.png' %}" alt="Italian Trulli">
+        <p class="members_only_text">Members Only</p>
     </div>
     </div>
 {% endblock content %}
