--- a/templates/administrator/search_sellers.html
+++ b/templates/administrator/search_sellers.html
@@ -62,7 +62,10 @@
                     <td>{{seller.account_number}}</td>
                     <td>{{seller.cedula}}</td>
                     <td>{{seller.bank_acount_type}}</td>
-                    <td>{{seller.phone_number}}</td>
+                    <td>{{seller.phone_number}}
+                        <a aria-label="Whatsapp" rel="noopener" rel="whatsapp" href="https://api.whatsapp.com/send?phone={{seller.phone_number}}"
+                        target="_blank"><img id="whatsapp-floating" class="text-center" src="{% static 'images/excursions/whatsapp.png'%}"></a>
+                    </td>
                     <td>{{seller.email}}</td>
                     <td>${{seller.due_to_pay_amount}}</td>
                     <td><a href="{% url 'paid_seller' seller.pk %}"><button class="btn btn-sm btn-danger"><i
@@ -74,7 +77,7 @@
             </table>
         </div>
 
-        <!-- today excursions bookings admin -->
+
         <h4 class="text-center mt-5">Total Sellers <span class="badge bg-site-color">{{all_sellers.count}}</span></h4>
         <div>
             <form class="row g-3" action="{% url 'create_auto_sellers' %}" method="POST">
@@ -132,7 +135,10 @@
                     <td>{{seller.account_number}}</td>
                     <td>{{seller.cedula}}</td>
                     <td>{{seller.bank_acount_type}}</td>
-                    <td>{{seller.phone_number}}</td>
+                    <td>{{seller.phone_number}}
+                        <a aria-label="Whatsapp" rel="noopener" rel="whatsapp" href="https://api.whatsapp.com/send?phone={{seller.phone_number}}"
+                        target="_blank"><img id="whatsapp-floating" class="text-center" src="{% static 'images/excursions/whatsapp.png'%}"></a>
+                    </td>
                     <td>{{seller.email}}</td>
                     <td><a href="{% url 'edit_seller'  seller.pk  %}"><button class="btn btn-sm btn-primary"><i
                                     class="far fa-edit">
